use valueOf or parse* instead of deprecated constructors