@@ -186,7 +186,7 @@ class InlineJavaClass {
 					l += (((long)c[i]) << (8 * i)) ;
 				}
 				double d = Double.longBitsToDouble(l) ;
-				ret = new Double(d) ;
+				ret = Double.valueOf(d) ;
 			}
 			else {
 				throw new InlineJavaCastException("Can't convert reference to " + p.getName()) ;
@@ -195,7 +195,7 @@ class InlineJavaClass {
 		else if (ClassIsBool(p)){
 			if (type.equals("undef")){
 				InlineJavaUtils.debug(4, "args is undef -> forcing to bool false") ;
-				ret = new Boolean("false") ;
+				ret = Boolean.FALSE;
 				InlineJavaUtils.debug(4, " result is " + ret.toString()) ;
 			}
 			else if (type.equals("scalar")){
@@ -207,7 +207,7 @@ class InlineJavaClass {
 				else{
 					arg = "true" ;
 				}
-				ret = new Boolean(arg) ;
+				ret = Boolean.valueOf(arg) ;
 				InlineJavaUtils.debug(4, " result is " + ret.toString()) ;
 			}
 			else{
@@ -217,7 +217,7 @@ class InlineJavaClass {
 		else if (ClassIsChar(p)){
 			if (type.equals("undef")){
 				InlineJavaUtils.debug(4, "args is undef -> forcing to char '\0'") ;
-				ret = new Character('\0') ;
+				ret = Character.valueOf('\0') ;
 				InlineJavaUtils.debug(4, " result is " + ret.toString()) ;
 			}
 			else if (type.equals("scalar")){
@@ -230,7 +230,7 @@ class InlineJavaClass {
 				else if (arg.length() > 1){
 					throw new InlineJavaCastException("Can't convert " + arg + " to " + p.getName()) ;
 				}
-				ret = new Character(c) ;
+				ret = Character.valueOf(c) ;
 				InlineJavaUtils.debug(4, " result is " + ret.toString()) ;
 			}
 			else{
@@ -406,7 +406,7 @@ class InlineJavaClass {
 			double.class,
 		} ;
 		for (int i = 0 ; i < list.length ; i++){
-			numeric_classes.put(list[i], new Boolean(true)) ;
+			numeric_classes.put(list[i], Boolean.TRUE) ;
 		}
 	}
 	static boolean ClassIsNumeric (Class p){
@@ -421,7 +421,7 @@ class InlineJavaClass {
 			double.class,
 		} ;
 		for (int i = 0 ; i < list.length ; i++){
-			double_classes.put(list[i], new Boolean(true)) ;
+			double_classes.put(list[i], Boolean.TRUE) ;
 		}
 	}
 	static boolean ClassIsDouble (Class p){
@@ -441,7 +441,7 @@ class InlineJavaClass {
 			csq
 		} ;
 		for (int i = 0 ; i < list.length ; i++){
-			string_classes.put(list[i], new Boolean(true)) ;
+			string_classes.put(list[i], Boolean.TRUE) ;
 		}
 	}
 	static boolean ClassIsString (Class p){
@@ -459,7 +459,7 @@ class InlineJavaClass {
 			char.class,
 		} ;
 		for (int i = 0 ; i < list.length ; i++){
-			char_classes.put(list[i], new Boolean(true)) ;
+			char_classes.put(list[i], Boolean.TRUE) ;
 		}
 	}
 	static boolean ClassIsChar (Class p){
@@ -477,7 +477,7 @@ class InlineJavaClass {
 			boolean.class,
 		} ;
 		for (int i = 0 ; i < list.length ; i++){
-			bool_classes.put(list[i], new Boolean(true)) ;
+			bool_classes.put(list[i], Boolean.TRUE) ;
 		}
 	}
 	static boolean ClassIsBool (Class p){
